--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,25 +7,25 @@ disqus:
 google-ID: 'UA-112060364-1'
 
 menu:
-- {name: 'About', path: 'menu', url: 'about.html'}
-- {name: 'Writing', path: 'menu', url: 'writing.html'}
-- {name: 'Contact', path: 'menu', url: 'contact.html'}
+- {name: 'Acerca', path: 'menu', url: 'about.html'}
+- {name: 'Artículos', path: 'menu', url: 'articulos.html'}
+- {name: 'Contacto', path: 'menu', url: 'contact.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'github', link: 'https://www.github.com/lenpaul'}
-- {icon: 'twitter', link: 'https://twitter.com/paululele'}
-- {icon: 'linkedin', link: 'http://www.linkedin.com/in/lenpaul/'}
-- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
+#- {icon: 'github', link: 'https://www.github.com/manuelmejiasleiva'}
+- {icon: 'twitter', link: 'https://twitter.com/MejiasLeiva'}
+- {icon: 'linkedin', link: 'http://www.linkedin.com/in/manuel-mejías-leiva/'}
+- {icon: 'envelope', link: 'mailto:mejiasleivamanuel@gmail.com'}
 - {icon: 'rss-square', link: '/feed.xml'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
 
 # Customize site text
 pagination:
-  next_page: 'Newer'
-  previous_page: 'Older'
+  next_page: 'Más'
+  previous_page: 'Menos'
 
-sharing_button_prompt: 'Feel free to share!'
+sharing_button_prompt: 'Compartir es gratis!'
 
 related_posts: 'You may also enjoy:'
 
